@@ -233,6 +233,7 @@
 
 0.1.0-alpha.37:
 ===============
+- (getversion) device and library support.
 - (copyfiles) (info) combination fix (MicroDot II 1.4 and DockBot 1.0).
 - (startup) confirmation level fix.
 - ?
